# scraper-test

./: .env  .gitignore  Cargo.toml  README.md
.sqlx/: query-29ea5cd41f368f1f75fd3e76f9c70cbe78f0a4c0f11cb3b7046dc637fdddb0b1.json  query-dbb27dcf4b95a66071c667da0c90e76d8e01c11269aae0d8cf9d0e3e3a364c16.json  query-e9f16091d64aa704dfd57391322465c536cde1f60747115e9d6f29f33151610d.json
migrations/: 20231227180055_create_cache_schema.sql
src/: main.rs
src/http/: browser.rs  cache.rs  client.rs  mod.rs  urls.rs
src/internal/: draws.rs  events.rs  mod.rs  session.rs  tournament.rs
