[package]
name = "scraper-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-htmx = "0.3.0"
actix-web = { version = "4.4.1", default-features = false, features = [ "macros" ] }
anyhow = "1.0"
dotenv = "0.15.0"
scraper = "0.18.1"
sqlx = { version = "0.7.2", features = [ "macros", "migrate", "runtime-tokio-rustls", "sqlite" ] }
thirtyfour = "0.32.0-rc.8"
tokio = "1.34.0"
